added new classe, smal refactoring